--- a/src/client/GUI/client.fxml
+++ b/src/client/GUI/client.fxml
@@ -7,16 +7,26 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Text?>
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="client.ClientController"
+          fx:controller="client.GUI.ClientController"
           fx:id="root"
-          alignment="CENTER" hgap="0" vgap="0">
+          alignment="CENTER" hgap="10" vgap="10">
     <padding><Insets top="20" right="20" bottom="10" left="20"/></padding>
     <GridPane xmlns="http://javafx.com/javafx"
               xmlns:fx="http://javafx.com/fxml"
-              fx:controller="client.ClientController"
-              fx:id="root"
-              alignment="CENTER" hgap="0" vgap="0">
+              fx:id="fieldEig"
+              alignment="CENTER" hgap="0" vgap="0" GridPane.columnIndex="0" GridPane.rowIndex="1">
+    </GridPane>
+    <GridPane xmlns="http://javafx.com/javafx"
+              xmlns:fx="http://javafx.com/fxml"
+              fx:id="fieldEnm"
+              alignment="CENTER" hgap="0" vgap="0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+    </GridPane>
+    <GridPane xmlns="http://javafx.com/javafx"
+              xmlns:fx="http://javafx.com/fxml"
+              fx:id="toPlace"
+              alignment="CENTER" hgap="20" vgap="20" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" GridPane.rowSpan="1">
     </GridPane>
 </GridPane>
