--- a/src/client/GUI/Start/start.fxml
+++ b/src/client/GUI/Start/start.fxml
@@ -9,11 +9,13 @@
           fx:id="root"
           alignment="CENTER" hgap="10" vgap="10">
     <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
-    <Label  GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="4" GridPane.rowSpan="1" text="Spiel starten:"/>
-    <Label GridPane.columnIndex="0" GridPane.rowIndex="1" text="Host (default 'localhost'):"/>
-    <TextField fx:id="host" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <Label GridPane.columnIndex="2" GridPane.rowIndex="1" text="Port (default 5050):"/>
-    <TextField fx:id="port" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-    <Button fx:id="createGame" text="Spiel starten" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowSpan="1"/>
-    <Label fx:id="commandline" GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowSpan="1"/>
+    <Label  GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="2" GridPane.rowSpan="1" text="Spiel starten:"/>
+    <Label GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="1" GridPane.rowSpan="1" text="Name: "/>
+    <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.columnSpan="3" GridPane.rowSpan="1"/>
+    <Label GridPane.columnIndex="0" GridPane.rowIndex="2" text="Host (default 'localhost'):"/>
+    <TextField fx:id="host" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    <Label GridPane.columnIndex="2" GridPane.rowIndex="2" text="Port (default 5050):"/>
+    <TextField fx:id="port" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+    <Button fx:id="createGame" text="Spiel starten" GridPane.rowIndex="3" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowSpan="1"/>
+    <Label fx:id="commandline" GridPane.rowIndex="4" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowSpan="1"/>
 </GridPane>
